# TripleLTE_Ethernet_Gateway

./: README.md
TripleUart_Ethernet_Gateway_ESP32_8720a/: platformio.ini
TripleUart_Ethernet_Gateway_ESP32_8720a/src/: gw_eth.cpp  gw_eth.h  gw_uart.cpp  gw_uart.h  hdr_arp.cpp  hdr_arp.h  hdr_icmp_echo_req.cpp  hdr_icmp_echo_req.h  hdr_portmap.cpp  hdr_portmap.h  if_eth.cpp  if_eth.h  ip_util.cpp  ip_util.h  main.cpp
nRF9160_LTE_Uart_Gateway_for_MultipleLteDevice/: CMakeLists.txt  Kconfig  actinius_icarus_som_ns.overlay  prj.conf  sparkfun_thing_plus_nrf9160_ns.overlay  ssci_nrf9160_iot_dev_board_ns.overlay
nRF9160_LTE_Uart_Gateway_for_MultipleLteDevice/src/: gateway.c  hdr_uart.c  hdr_uart.h  ip_util.c  ip_util.h  main.c  main.h  pmap.c
nRF9160_LTE_Uart_Gateway_for_MultipleLteDevice/src/nrf91/: nrf91_defines.h  nrf91_lte.c  nrf91_lte.h  nrf91_util.c  nrf91_util.h
